# sefaria-mcp

./: .dockerignore  .env.example  .gitignore  .releaserc  Dockerfile  LICENSE  OP.MD  README.md  pyproject.toml
.github/workflows/: release.yaml
src/sefaria_mcp/: __init__.py  logic.py  main.py  resources.py  tools.py
