[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sefaria-mcp"
version = "0.1.0"
description = "A FastMCP server for Sefaria"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "fastmcp",
    "hdate",
    "requests",
    "pillow",
    "fastapi",
    "uvicorn"
]

[project.scripts]
sefaria-mcp = "sefaria_mcp.main:main" 